added photo section

--- a/index.html
+++ b/index.html
@@ -5,11 +5,24 @@
 </html>
 <body>
     <main>
-        <h1>POERTFOLIO DI JAURIAS ZADI</h1>
+        <h2> Jaurias zadi</h2>
+        <h1>Travel and lifestyle videomaker</h1>
 
         <section>
             <img src="foto/C0386T01.JPG" alt="passeggiata in riva al mare">
-            <p></p>
+            <h2>About me </h2>
+            <p>I am a tirelessly, curious travel and lifestyle photographer videomaker based in Italy.
+                When i can, i fly to visit a piece of the world to capture moments of life, culture and 
+            beauty with my sony camera </p>
+        </section>
+        <section>
+          <h2> Photo </h2>  
+        </section>
+        <section>
+            <h2> Video </h2>
+        </section>
+        <section>
+            <h2> Contact</h2>
         </section>
     </main>
 </body>
