adding submin button in contat me

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         </section>
         <section>
             <h2> Contact</h2>
+            <button> submin</button>
         </section>
     </main>
 </body>
