--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
             <h2> Video </h2>
         </section>
         <section>
-            <h2> Contact</h2>
+            <h2> Contact me</h2>
+
+
             <button> submin</button>
         </section>
     </main>
